<resources>
    <string name="app_name">3bber</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">History</string>
    <string name="menu_slideshow" translatable="false">Mood Tracker</string>

    <string name="create">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Passsword</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show password</string>
    <string name="create_account">Create Account</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="role">Register as</string>
    <string name="fields_error">Please fill the required fields</string>
    <string name="email_error">Email is badly formatted</string>
    <string name="role_error">Please select your role</string>
    <string name="gender_error">Please select your gender</string>
    <string name="pass_error">Password should has numbers and letters\nPassword should contain at least 8 characters</string>
    <string name="pass_error_8">Password should contain at least 8 characters</string>
    <string name="pass_Error_numchar">Password should has numbers and letters</string>
    <string name="confirm_error">Passwords do not match</string>
    <string name="name_error">Username is already taken</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="abber_logo">Abber Logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="wrong_email_or_password">Wrong Email or Password</string>
    <string name="verify_email">Verify your email address</string>
    <string name="verify_message">Thank you for registering an account with us. Please click the button below to verify your email and start enjoying 3bber.</string>
    <string name="verify_button">Verify</string>
    <string name="email_sent">Email sent to</string>
    <string name="email_sent_error">Email couldn\'t be sent, try again!</string>
    <string name="email_verify_failed">Email is not verified yet!</string>
    <string name="verify_email_image">Verify email image</string>
    <string name="next_button">Next Button</string>
    <string name="send_again">Send again</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_pass_message">Enter your email address that is associated with an 3bber account, and we will send a link to sign in without password</string>
    <string name="send">Send</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email_not_received_yet">Email not received yet?</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="add_photo">Add Photo</string>
    <string-array name="roleMenu">
        <item>Select Role</item>
        <item>User</item>
        <item>Psychologist/Guardian</item>
    </string-array>

    <string-array name="locality">
        <item>عربي</item>
        <item>English</item>
    </string-array>
</resources>