<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b4"
    tools:context=".verify_email">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_405sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_45sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_400sdp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:contentDescription="@string/verify_email_image"
                        app:srcCompat="@drawable/verifyemail" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:gravity="center"
                        android:text="@string/verify_email"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_6sdp"
                        android:paddingEnd="@dimen/_6sdp"
                        android:text="@string/verify_message"
                        android:textSize="@dimen/_13ssp" />

                    <Button
                        android:id="@+id/verify"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:background="@drawable/button"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:text="@string/verify_button"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_18ssp"
                        app:backgroundTintMode="multiply" />

                    <LinearLayout
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/abhaya_libre_semibold"
                            android:gravity="end"
                            android:text="@string/email_not_received_yet"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:id="@+id/send_again"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:layout_marginEnd="@dimen/_2sdp"
                            android:layout_weight="1"
                            android:fontFamily="@font/abhaya_libre_semibold"
                            android:text="@string/send_again"
                            android:textColor="#006064"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="left"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@drawable/button"
                    android:backgroundTint="#71A562"
                    android:backgroundTintMode="multiply"
                    android:contentDescription="@string/next_button"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/next"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/button"
                    android:backgroundTint="#71A562"
                    android:backgroundTintMode="multiply"
                    android:contentDescription="@string/next_button"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:fontFamily="@font/abhaya_libre_semibold"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/back" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:fontFamily="@font/abhaya_libre_semibold"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/next" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_verify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

    </RelativeLayout>
</ScrollView>