<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/b4"
    tools:context=".Forgot_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_450sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="@dimen/_130sdp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:contentDescription="@string/verify_email_image"
                        app:srcCompat="@drawable/forgot" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:gravity="center"
                        android:text="@string/forgot_your_password"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_6sdp"
                        android:paddingEnd="@dimen/_6sdp"
                        android:text="@string/forgot_pass_message"
                        android:textSize="@dimen/_13ssp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/forgot_Email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_220sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:errorEnabled="true"
                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        app:startIconTint="#71A562">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:fontFamily="@font/abhaya_libre_semibold"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/_15ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/send"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:text="@string/send"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_16ssp"
                        app:backgroundTintMode="multiply" />

                    <Button
                        android:id="@+id/back2login"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button2"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:text="@string/back_to_login"
                        android:textAllCaps="false"
                        android:textColor="#DD71A562"
                        android:textSize="@dimen/_16ssp"
                        app:backgroundTint="#FFFFFF"
                        app:backgroundTintMode="multiply" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_forgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>