<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b10"
    tools:context=".profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/architects_daughter"
            android:gravity="center"
            android:text="Personalize your profile"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_photo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/download"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/button"
            android:fontFamily="@font/abhaya_libre_semibold"
            android:drawableLeft="@drawable/ic_action_add"
            android:text="@string/add_photo"
            android:textAllCaps="false"
            android:textSize="@dimen/_16ssp"
            app:backgroundTintMode="multiply" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="left"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/button"
                android:backgroundTint="#71A562"
                android:backgroundTintMode="multiply"
                android:contentDescription="@string/next_button"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/next"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/button"
                android:backgroundTint="#71A562"
                android:backgroundTintMode="multiply"
                android:contentDescription="@string/next_button"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/abhaya_libre_semibold"
                android:gravity="center"
                android:text="@string/back"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/abhaya_libre_semibold"
                android:gravity="center"
                android:text="@string/next"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>





</ScrollView>