<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b4"
    android:fillViewport="true"
    tools:context=".resetPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_410sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:gravity="center"
                        android:text="Reset Your Password"
                        android:textSize="@dimen/_23ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:gravity="center"
                        android:paddingStart="@dimen/_6sdp"
                        android:paddingEnd="@dimen/_6sdp"
                        android:text="If you want to reset your password write a new one so next time you can login with it. If you want to keep it just skip"
                        android:textSize="@dimen/_14ssp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/new_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_240sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_9sdp"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:startIconTint="#71A562"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24"
                        app:helperTextEnabled="true"
                        app:helperText="@string/pass_error">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_gravity="center"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:textSize="@dimen/_15ssp"
                            android:fontFamily="@font/abhaya_libre_semibold"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_new_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_240sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:startIconTint="#71A562"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:inputType="textPassword"
                            android:hint="@string/confirm_password"
                            android:textSize="@dimen/_15ssp"
                            android:fontFamily="@font/abhaya_libre_semibold"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/update"
                        android:layout_width="@dimen/_110sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:text="Update"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_16ssp"
                        app:backgroundTintMode="multiply" />

                    <Button
                        android:id="@+id/skip"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/button2"
                        android:fontFamily="@font/abhaya_libre_semibold"
                        android:text="Skip"
                        android:textAllCaps="false"
                        android:textColor="#DD71A562"
                        android:textSize="@dimen/_16ssp"
                        app:backgroundTint="#FFFFFF"
                        app:backgroundTintMode="multiply" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_reset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>